MAINT: update mypy configuration and action for current file structure and avoiding 'tee' exit code fragility

--- a/pyproject.toml.in
+++ b/pyproject.toml.in
@@ -103,6 +103,6 @@ disable_error_code = "import-untyped"
 exclude = [
     "modsim_template",
     "tutorials",
-    "tests"
+    "_abaqus",
 ]
 packages = ["waves"]
