WIP: focus on fixing the package proper, ruff autolinter

--- a/pyproject.toml.in
+++ b/pyproject.toml.in
@@ -103,6 +103,8 @@ disable_error_code = "import-untyped"
 exclude = [
     "modsim_template",
     "tutorials",
+    # TODO: remove the test exclusion after fixing the package errors
+    "_tests",
     "_abaqus",
 ]
 packages = ["waves"]
