--- a/pyproject.toml.in
+++ b/pyproject.toml.in
@@ -104,7 +104,10 @@ exclude = [
     "modsim_template",
     "tutorials",
     # TODO: remove the test exclusion after fixing the package errors
+    # https://re-git.lanl.gov/aea/python-projects/waves/-/issues/973
     "_tests",
+    # TODO: fix type annotations and static type checking in _abaqus module
+    # https://re-git.lanl.gov/aea/python-projects/waves/-/issues/974
     "_abaqus",
 ]
 packages = ["waves"]
